# fastapi-daisyui-template

./: README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  tailwind.config.js
project/: app.py  crud.py  database.py  models.py  schemas.py  temp.py  utils.py
project/migrations/: env.py
project/migrations/versions/: 2c9bf5eb114c_.py  d82091c20dbd_.py
project/scraping/: _68k.py  cbc.py  cnn.py  common.py  skimfeed.py
project/static/: output.css
project/templates/: base.html  index.html
tests/: test_main.py
